--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">International Conference</span><span class="title2">on Statistics and Data Science </span> <span class="year">2025</span>
+            <span class="title1">International Conference on Statistics and Data Science</span><span class="title2"> </span> <span class="year">2025</span>
         </div>
         <div class="bottom-right">
             June 23-25, 2525 <br> Vancouver, BC, Canada
