--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <div class="banner">
         <img src="assets/banner.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">International Conference on Statistics and Data Science</span><span class="title2"> </span> <span class="year">2025</span>
+            <span class="title1">International Conference on Statistics and Data Science</span>
         </div>
         <div class="bottom-right">
-            June 23-25, 2525 <br> Vancouver, BC, Canada
+            June 23-25, 2025 <br> Vancouver, BC, Canada
         </div>
     </div>
 
@@ -44,13 +44,9 @@
         </tr>
     </table>
 
-    <h2>What is This Website?</h2>
+    <h2> </h2>
     <p>
-        This website is a template that you could use for a (small) academic conference. 
-        It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the conference.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the conference.
-        It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
+        
     </p>
     <p>
         You can use this template by cloning all the files from this
