--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang='en'>
 
@@ -5,20 +6,21 @@
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
+    <meta name="description" content="Statistical Learning for Large Scale Data">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <title>Statistical Learning for Large Scale Data</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/SFU.jpeg" alt="Conference Template Banner" style="width: 98%">
         <div class="top-left">
-            <span class="title1">International Conference on Statistics and Data Science</span>
+<span class="title2">International Conference on Statistics and Data Science</span>
         </div>
+
         <div class="bottom-right">
             June 23-25, 2025 <br> Vancouver, BC, Canada
         </div>
@@ -39,59 +41,60 @@
                 <a title="Directions to the Conference" href="directions">Directions</a>
             </td>
             <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
+                <a title="About Richard" href="about">About Richard</a>
             </td>
         </tr>
     </table>
 
-    <h2> </h2>
-    <p>
-        
-    </p>
-    <p>
-        You can use this template by cloning all the files from this
-        <a target="_blank" href="https://github.com/mikepierce/conference-website-template">GitHub repo here</a>.
-        This template was created from a website I made for 
-        <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>,
-        in case you want to see an example of this template being used in the wild.
-    </p>
-    <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-    </p>
+<!--    <h2>What is This Website?</h2>
+-->
 
-    <h2>Organizers</h2>
+   <p> 
+       The International Conference on Statistics and Data Science will be in Vancouver, B.C., Canada from Monday, June 23 through Wednesday, June 25, 2025. 
+
+Invited session proposals are being accepted until February 15, 2025 using this form. 
+
+The objective of the conference is to bring together researchers in statistics and data science from academia, industry, and government 
+       in a stimulating setting to exchange ideas on the developments of modern statistics, machine learning, and broadly defined theory, methods, and applications in data science.
+         </p>
+   
+
+ 
+    <h2>Organizer Committee</h2>
     <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the conference,
-        as well as list contact information for the organizers,
-        and show off the logos of the sponsors.
-        It looks like his conference was sponsored by kittens!
+     <a href="https://www.sfu.ca/science/stat/cao/">Jiguo Cao  </a>,  
+        <a href="https://haoluns.wordpress.com/"> Haolun Shi</a>, and
+        <a href="http://www.sfu.ca/~lwa68/"> Liangliang Wang</a>
+    </p>
+<h2>Sponsors</h2>
+    <p>
+       The organizers are grateful for support from the following sponsors:
     </p>
     <table class="sponsors">
         <tr>
-            <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten1.jpg" alt="First Sponsor Name">
+  <td class="sponsor">
+                <a href="https://www.sfu.ca/">
+                    <img src="assets/SFU_logo.png" alt="Simon Fraser University">
                 </a>
             </td>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten2.jpg" alt="Second Sponsor Name" style="width: 80%">
+                <a href="https://www.pims.math.ca/">
+                    <img src="assets/PIMS.png" alt="Pacific Institute for the Mathematical Sciences">
                 </a>
             </td>
             <td class="sponsor">
-                <a href="http://www.eyebleach.me/">
-                    <img src="assets/kitten3.jpg" alt="Third Sponsor Name">
+                <a href="http://www.canssi.ca/">
+                    <img src="assets/canssi.gif" alt="The Canadian Statistical Sciences Institute" style="width: 80%">
                 </a>
             </td>
-        </tr>
+         </tr>
     </table>
 
+    <!--
     <footer>
         &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
-    </footer>
-
+     </footer>
+    --> 
+    
 </body>
 </html>
-
