--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="bottom-right">
-            Friday, June 21, 2024 <br> Simon Fraser University, Burnaby, BC, Canada
+            June 23-25, 2025 <br> Vancouver, BC, Canada
         </div>
     </div>
 
@@ -46,28 +46,25 @@
         </tr>
     </table>
 
-<!--    <h2>What is This Website?</h2>
--->
+  <p> 
 
+    The International Conference on Statistics and Data Science will be in Vancouver, B.C., Canada from Monday, June 23 through Wednesday, June 25, 2025. 
+         </p>
+
+    <p>   
+Invited session proposals are being accepted until February 15, 2025 using this form. 
+     </p>   
+    
    <p>   
-       The conference is to promote the presentation and discussion on the latest progress in statistical learning for large-scale data and to celebrate the remarkable contributions of Prof. Richard Lockhart in this research field and other areas of statistics. 
-       It empowers organizations and researchers to harness the vast amount of information available today, leading to better decision-making, improved efficiency, and the potential for groundbreaking discoveries across various domains.
-  </p>
-   <p>   
- Postdocs and Students are encouraged to present their work during the poster session. Travel awards are available for postdocs and students who present their work. 
-       The best poster award will also be presented at the end of the conference. Please <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEk0heAp_YcWjPX_BOIjKW_hU3jXlLSKB8dBhh6odPL_Hx-g/viewform?usp=pp_url"> submit your poster title here</a> . 
-  </p>
- <!--    <p>
-For graduate students, this conference offers opportunities to learn the frontier of statistical research and important real-world problems from industry and helps them build the professional network for their future career. It also provides opportunities for students to share their work in the poster sections. It might lead to potential future opportunities for students' internships in the industry.
+      The objective of the conference is to bring together researchers in statistics and data science from academia, industry, and government in a stimulating 
+       setting to exchange ideas on the developments of modern statistics, machine learning, and broadly defined theory, methods, and applications in data science. 
    </p>
-    <p>
-For researchers, besides sharing each other's recent research developments, this conference will bridge the gap between university research and industry R&D, which may lead to new collaborations on research motivated by solving real-world industry problems.    </p>
-   </p> 
---> 
+   
+
  
     <h2>Organizer Committee</h2>
     <p>
-     <a href="https://www.sfu.ca/science/stat/cao/">Jiguo Cao  </a>, <a href="http://people.stat.sfu.ca/~dbingham/"> Derek Bingham</a>, 
+     <a href="https://www.sfu.ca/science/stat/cao/">Jiguo Cao  </a>, 
         <a href="https://haoluns.wordpress.com/"> Haolun Shi</a>, and
         <a href="http://www.sfu.ca/~lwa68/"> Liangliang Wang</a>
     </p>
