--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <base href=".">
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
     <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Statistical Learning for Large Scale Data">
+    <meta name="description" content="International Conference on Statistics and Data Science">
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Statistical Learning for Large Scale Data</title>
+    <title>International Conference on Statistics and Data Science</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <div class="banner">
         <img src="assets/SFU.jpeg" alt="Conference Template Banner" style="width: 98%">
         <div class="top-left">
-<span class="title2">Statistical Learning for Large Scale Data</span>
+<span class="title2">International Conference on Statistics and Data Science</span>
         </div>
 
         <div class="bottom-right">
