--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <div class="banner">
-        <img src="assets/SFU.jpeg" alt="Conference Template Banner" style="width: 98%">
+        <img src="assets/Vancouver.jpeg" alt="Conference Template Banner" style="width: 98%">
         <div class="top-left">
 <span class="title2"><h1 style="font-size:10vw">International Conference on Statistics and Data Science</h1></span>
         </div>
