--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <span class="title2"><h1 style="font-size:5vw">International Conference on Statistics and Data Science</h1></span>
         </div>
 
-        <div class="bottom-right">
+        <div class="bottom-left">
             June 23-25, 2025 <br> Vancouver, BC, Canada
         </div>
     </div>
